--- a/style/style.css
+++ b/style/style.css
@@ -46,7 +46,7 @@ header > h1 {
     color: white;
     font-family: var(--fonte-destaque);
     font-size: 3em;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.514);
     font-weight: normal;
 }
@@ -74,6 +74,7 @@ nav > a {
     padding: 10px;
     text-decoration: none;
     transition-duration: .5s;
+    margin-top: 20px;
 }
 
 nav > a:hover {
