--- a/style/style.css
+++ b/style/style.css
@@ -74,7 +74,7 @@ nav > a {
     padding: 10px;
     text-decoration: none;
     transition-duration: .5s;
-    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 nav > a:hover {
